--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-flask==3.1.2
-flask-cors==6.0.1
-requests==2.32.5
-beautifulsoup4==4.13.5
-gunicorn==23.0.0
+Flask==3.0.3
+flask-cors==4.0.1
+requests==2.32.3
+beautifulsoup4==4.12.3
