--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,5 @@ services:
     env: python
     plan: free
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn blog_scraper_clean_skuad:app"
+    startCommand: "gunicorn blog_scraper_skuad:app"
     autoDeploy: true
